--- a/Capitulo-1/mapas-ampliados/mapas-ampliados/CSS/style.css
+++ b/Capitulo-1/mapas-ampliados/mapas-ampliados/CSS/style.css
@@ -30,6 +30,22 @@
         z-index: 10;
       }
 
+      .map-2 {
+        width: 100%;  
+        display: flex;  
+        justify-content: center;
+        align-items: center;
+         
+      }
+      
+      .map-2-center {
+        max-width: 95%; /* La imagen no ocupará más del 95% del ancho */
+        height: auto;
+        display: block; /* Necesario para margin: 0 auto; si no usas flex */
+        margin: 0 auto; /* Centra la imagen si el contenedor no es flex */
+        z-index: 10;
+      }
+
 
 
       
@@ -54,7 +70,7 @@
                     margin: 0; /* Asegúrate de no tener márgenes inesperados en el body */
                   }
                 
-                  .map-1 {
+                  .map-1  {
                     display: flex;
                     justify-content: center; /* Centrado horizontal */
                     align-items: center;    /* Centrado vertical */
@@ -64,7 +80,24 @@
                     z-index: 10;
                   }
                 
+                  .map-2  {
+                    display: flex;
+                    justify-content: center; /* Centrado horizontal */
+                    align-items: center;    /* Centrado vertical */
+                    width: 100%;
+                    height: 100vh; /* O una altura específica que necesites */
+                    background-color: rgba(221, 221, 221, 0.691); /* Para visualizar el contenedor (opcional) */
+                    z-index: 10;
+                  }
+
                   .map-1-center {
+                    transform: rotate(90deg);
+                    max-width: 90vh; /* Ajusta según necesites */
+                    max-height: 90vw; /* Ajusta según necesites */
+                    z-index: 10;
+                  }
+
+                  .map-2-center {
                     transform: rotate(90deg);
                     max-width: 90vh; /* Ajusta según necesites */
                     max-height: 90vw; /* Ajusta según necesites */
