--- a/Capitulo-1/mapas-ampliados/mapas-ampliados/CSS/style.css
+++ b/Capitulo-1/mapas-ampliados/mapas-ampliados/CSS/style.css
@@ -46,6 +46,22 @@
         z-index: 10;
       }
 
+      .map-3 {
+        width: 100%;  
+        display: flex;  
+        justify-content: center;
+        align-items: center;
+         
+      }
+      
+      .map-3-center {
+        max-width: 95%; /* La imagen no ocupará más del 95% del ancho */
+        height: auto;
+        display: block; /* Necesario para margin: 0 auto; si no usas flex */
+        margin: 0 auto; /* Centra la imagen si el contenedor no es flex */
+        z-index: 10;
+      }
+
 
 
       
@@ -90,6 +106,16 @@
                     z-index: 10;
                   }
 
+                  .map-3  {
+                    display: flex;
+                    justify-content: center; /* Centrado horizontal */
+                    align-items: center;    /* Centrado vertical */
+                    width: 100%;
+                    height: 100vh; /* O una altura específica que necesites */
+                    background-color: rgba(221, 221, 221, 0.691); /* Para visualizar el contenedor (opcional) */
+                    z-index: 10;
+                  }
+
                   .map-1-center {
                     transform: rotate(90deg);
                     max-width: 90vh; /* Ajusta según necesites */
@@ -98,6 +124,13 @@
                   }
 
                   .map-2-center {
+                    transform: rotate(90deg);
+                    max-width: 90vh; /* Ajusta según necesites */
+                    max-height: 90vw; /* Ajusta según necesites */
+                    z-index: 10;
+                  }
+
+                  .map-3-center {
                     transform: rotate(90deg);
                     max-width: 90vh; /* Ajusta según necesites */
                     max-height: 90vw; /* Ajusta según necesites */
