--- a/Capitulo-1/mapas-ampliados/mapas-ampliados/CSS/style.css
+++ b/Capitulo-1/mapas-ampliados/mapas-ampliados/CSS/style.css
@@ -46,39 +46,36 @@
         z-index: 10;
       }
 
-      .map-3 {
-        width: 100%;  
-        display: flex;  
-        justify-content: center;
-        align-items: center;
-         
-      }
-      
-      .map-3-center {
-        max-width: 95%; /* La imagen no ocupará más del 95% del ancho */
-        height: auto;
-        display: block; /* Necesario para margin: 0 auto; si no usas flex */
-        margin: 0 auto; /* Centra la imagen si el contenedor no es flex */
+      .map-3  {
+        display: flex;
+        justify-content: center; /* Centrado horizontal */
+        align-items: center;    /* Centrado vertical */
+        width: 100%;
+        height: 100vh; /* O una altura específica que necesites */
+        background-color: rgba(221, 221, 221, 0.691); /* Para visualizar el contenedor (opcional) */
         z-index: 10;
       }
 
+      .map-3-center {
+        transform: rotate(0deg);
+        max-width: 90vh; /* Ajusta según necesites */
+        max-height: 90vw; /* Ajusta según necesites */
+        z-index: 10;
+      }
 
+      .close3 {position: fixed;
+        margin-top: -25%;
+        margin-left: 45%;
+        }
 
-      
-         i{font-size: 36px;
+      i{font-size: 36px;
         z-index: 100;
         text-decoration: none;
         color:black;
          
         }
 
-        .close{position: fixed;
-                margin-top: 2%;
-                margin-left: 4%;}
-
-      
-
-
+                     
 @media (max-width: 650px) {
     
  
@@ -106,15 +103,7 @@
                     z-index: 10;
                   }
 
-                  .map-3  {
-                    display: flex;
-                    justify-content: center; /* Centrado horizontal */
-                    align-items: center;    /* Centrado vertical */
-                    width: 100%;
-                    height: 100vh; /* O una altura específica que necesites */
-                    background-color: rgba(221, 221, 221, 0.691); /* Para visualizar el contenedor (opcional) */
-                    z-index: 10;
-                  }
+
 
                   .map-1-center {
                     transform: rotate(90deg);
@@ -130,6 +119,21 @@
                     z-index: 10;
                   }
 
+                  .close{position: fixed;
+                    margin-top: -30%;
+                    margin-left: 18%;}
+
+
+                  .map-3  {
+                    display: flex;
+                    justify-content: center; /* Centrado horizontal */
+                    align-items: center;    /* Centrado vertical */
+                    width: 100%;
+                    height: 100vh; /* O una altura específica que necesites */
+                    background-color: rgba(221, 221, 221, 0.691); /* Para visualizar el contenedor (opcional) */
+                    z-index: 10;
+                  }
+
                   .map-3-center {
                     transform: rotate(90deg);
                     max-width: 90vh; /* Ajusta según necesites */
@@ -137,7 +141,10 @@
                     z-index: 10;
                   }
 
-                  img{ z-index: 10;}
+                  .close3 {position: fixed;
+                    margin-top: 90%;
+                    margin-left: 40%;
+                    }
 
                   i{font-size: 36px;
                     z-index: 100;
@@ -145,9 +152,10 @@
                     color:black;
                      
                     }
+}
+                 
 
-                .close{position: fixed;
-                    margin-top: -30%;
-                    margin-left: 18%;}
+                
 
-  }
+
+                    
