--- a/style.css
+++ b/style.css
@@ -113,6 +113,7 @@ body{font-family: 'EB Garamond', serif;
     width: 80%;
     font-size: 32px;
     margin-top: 180px;
+    color: #800020;
 
 }
 
@@ -267,6 +268,39 @@ body{font-family: 'EB Garamond', serif;
     font-size: 18px;
 }
 
+/**/
+
+.subcontainer-3{
+
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 100%;
+}
+
+
+
+.subcontainer-3 h4{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 80%;
+    font-size: 32px;
+    margin-top: 180px;
+    color: #800020;
+
+}
+
+.subcontainer-3 p{
+
+    font-size: 24px;
+    padding: 80px;
+    line-height: 1.5em;
+    width: 72%;
+
+}
 
 
  
