--- a/style.css
+++ b/style.css
@@ -518,5 +518,22 @@ body{font-family: 'EB Garamond', serif;
         font-size: 18px;
     }
 
+    .subcontainer-3 h4{
+        font-size: 28px;
+        padding: 22px;
+        margin-top: 60px;
+        color: #800020;
+    
+    }
+    
+    .subcontainer-3 p{
+    
+        width: 80%;
+        font-size: 18px;
+        padding: 12px;
+        line-height: 1.5em;
+    
+    }
+
     
 }
