--- a/style.css
+++ b/style.css
@@ -666,8 +666,339 @@ body{font-family: 'EB Garamond', serif;
     padding: 80px;
     line-height: 1.5em;
     width: 72%;
-
 }
+
+
+.fotosFlexSueloClima{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+
+
+.pic-15{
+
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 480px;
+}
+
+.pic-15 img {
+    width: 476px;
+    margin-top: 120px;
+    padding: 48px;
+    object-fit: cover;
+}
+
+.epi-15{display: flex;
+    justify-content: center;}
+
+
+  .epi-15 p{
+    width: 376px;
+    padding: 6px;
+    font-size: 18px;
+}
+
+
+.pic-16{
+
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 480px;
+}
+
+.pic-16 img {
+    width: 476px;
+    margin-top: 120px;
+    padding: 48px;
+    object-fit: cover;
+}
+
+.epi-16{display: flex;
+    justify-content: center;}
+
+
+  .epi-16 p{
+    width: 376px;
+    padding: 6px;
+    font-size: 18px;
+}
+
+
+.pic-17{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 480px;
+}
+
+.pic-17 img {
+    width: 476px;
+    margin-top: 120px;
+    padding: 48px;
+    object-fit: cover;
+}
+
+.epi-17{display: flex;
+    justify-content: center;}
+
+
+  .epi-17 p{
+    width: 376px;
+    padding: 6px;
+    font-size: 18px;
+}
+
+.pic-18{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 480px;
+}
+
+.pic-18 img {
+    width: 476px;
+    margin-top: 120px;
+    padding: 48px;
+    object-fit: cover;
+}
+
+.epi-18{display: flex;
+    justify-content: center;}
+
+
+  .epi-18 p{
+    width: 376px;
+    padding: 6px;
+    font-size: 18px;
+}
+
+/* 19 */
+
+.pic-19{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 480px;
+}
+
+.pic-19 img {
+    width: 476px;
+    margin-top: 120px;
+    padding: 48px;
+    object-fit: cover;
+}
+
+.epi-19{display: flex;
+    justify-content: center;}
+
+
+  .epi-19 p{
+    width: 376px;
+    padding: 6px;
+    font-size: 18px;
+}
+
+.pic-20{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 480px;
+}
+
+.pic-20 img {
+    width: 476px;
+    margin-top: 120px;
+    padding: 48px;
+    object-fit: cover;
+}
+
+.epi-20{display: flex;
+    justify-content: center;}
+
+
+  .epi-20 p{
+    width: 376px;
+    padding: 6px;
+    font-size: 18px;
+}
+
+.pic-21{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 480px;
+}
+
+.pic-21 img {
+    width: 476px;
+    margin-top: 120px;
+    padding: 48px;
+    object-fit: cover;
+}
+
+.epi-21{display: flex;
+    justify-content: center;}
+
+
+  .epi-21 p{
+    width: 376px;
+    padding: 6px;
+    font-size: 18px;
+}
+
+
+.pic-22{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 480px;
+}
+
+.pic-22 img {
+    width: 476px;
+    margin-top: 120px;
+    padding: 48px;
+    object-fit: cover;
+}
+
+.epi-22{display: flex;
+    justify-content: center;}
+
+
+  .epi-22 p{
+    width: 376px;
+    padding: 6px;
+    font-size: 18px;
+}
+
+.pic-23{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 480px;
+}
+
+.pic-23 img {
+    width: 476px;
+    margin-top: 120px;
+    padding: 48px;
+    object-fit: cover;
+}
+
+.epi-23{display: flex;
+    justify-content: center;}
+
+
+  .epi-23 p{
+    width: 376px;
+    padding: 6px;
+    font-size: 18px;
+}
+
+
+.pic-24{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 480px;
+}
+
+.pic-24 img {
+    width: 476px;
+    margin-top: 120px;
+    padding: 48px;
+    object-fit: cover;
+}
+
+.epi-24{display: flex;
+    justify-content: center;}
+
+
+  .epi-24 p{
+    width: 376px;
+    padding: 6px;
+    font-size: 18px;
+}
+
+.pic-25{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 480px;
+}
+
+.pic-25 img {
+    width: 476px;
+    margin-top: 120px;
+    padding: 48px;
+    object-fit: cover;
+}
+
+.epi-25{display: flex;
+    justify-content: center;}
+
+
+  .epi-25 p{
+    width: 376px;
+    padding: 6px;
+    font-size: 18px;
+}
+
+.pic-26{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 480px;
+}
+
+.pic-26 img {
+    width: 476px;
+    margin-top: 120px;
+    padding: 48px;
+    object-fit: cover;
+}
+
+.epi-26{display: flex;
+    justify-content: center;}
+
+
+  .epi-26 p{
+    width: 376px;
+    padding: 6px;
+    font-size: 18px;
+}
+
+
+.pic-27{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 480px;
+}
+
+.pic-27 img {
+    width: 476px;
+    margin-top: 120px;
+    padding: 48px;
+    object-fit: cover;
+}
+
+.epi-27{display: flex;
+    justify-content: center;}
+
+
+  .epi-27 p{
+    width: 376px;
+    padding: 6px;
+    font-size: 18px;
+}
+
 
 @media screen and (max-width: 768px) {
    
@@ -1025,6 +1356,7 @@ body{font-family: 'EB Garamond', serif;
         width: 80%;
         padding: 6px;
         font-size: 18px;
+        
     }
 
 
@@ -1234,6 +1566,323 @@ body{font-family: 'EB Garamond', serif;
     
     
       .epi-14 p{
+        width: 80%;
+        padding: 6px;
+        font-size: 18px;
+    }
+
+    .pic-15{
+    
+        display: flex;
+        justify-content: center;
+        width: 100%;
+    }
+    
+    .pic-15 img {
+        width: 80%;
+        margin-top: 120px;
+        padding: 24px;
+    }
+    
+    .epi-15{display: flex;
+        justify-content: center;
+        width: 100%;}
+    
+    
+      .epi-15 p{
+        width: 80%;
+        padding: 6px;
+        font-size: 18px;
+    }
+
+
+    .pic-16{
+    
+        display: flex;
+        justify-content: center;
+        width: 100%;
+    }
+    
+    .pic-16 img {
+        width: 80%;
+        margin-top: 120px;
+        padding: 24px;
+    }
+    
+    .epi-16{display: flex;
+        justify-content: center;
+        width: 100%;}
+    
+    
+      .epi-16 p{
+        width: 80%;
+        padding: 6px;
+        font-size: 18px;
+    }
+
+
+    .pic-17{
+    
+        display: flex;
+        justify-content: center;
+        width: 100%;
+    }
+    
+    .pic-17 img {
+        width: 80%;
+        margin-top: 120px;
+        padding: 24px;
+    }
+    
+    .epi-17{display: flex;
+        justify-content: center;
+        width: 100%;}
+    
+    
+      .epi-17 p{
+        width: 80%;
+        padding: 6px;
+        font-size: 18px;
+    }
+
+    .pic-18{
+    
+        display: flex;
+        justify-content: center;
+        width: 100%;
+    }
+    
+    .pic-18 img {
+        width: 80%;
+        margin-top: 120px;
+        padding: 24px;
+    }
+    
+    .epi-18{display: flex;
+        justify-content: center;
+        width: 100%;}
+    
+    
+      .epi-18 p{
+        width: 80%;
+        padding: 6px;
+        font-size: 18px;
+    }
+
+    /* 19 */
+
+    .pic-19{
+    
+        display: flex;
+        justify-content: center;
+        width: 100%;
+    }
+    
+    .pic-19 img {
+        width: 80%;
+        margin-top: 120px;
+        padding: 24px;
+    }
+    
+    .epi-19{display: flex;
+        justify-content: center;
+        width: 100%;}
+    
+    
+      .epi-19 p{
+        width: 80%;
+        padding: 6px;
+        font-size: 18px;
+    }
+
+
+    .pic-20{
+    
+        display: flex;
+        justify-content: center;
+        width: 100%;
+    }
+    
+    .pic-20 img {
+        width: 80%;
+        margin-top: 120px;
+        padding: 24px;
+    }
+    
+    .epi-20{display: flex;
+        justify-content: center;
+        width: 100%;}
+    
+    
+      .epi-20 p{
+        width: 80%;
+        padding: 6px;
+        font-size: 18px;
+    }
+
+    .pic-21{
+    
+        display: flex;
+        justify-content: center;
+        width: 100%;
+    }
+    
+    .pic-21 img {
+        width: 80%;
+        margin-top: 120px;
+        padding: 24px;
+    }
+    
+    .epi-21{display: flex;
+        justify-content: center;
+        width: 100%;}
+    
+    
+      .epi-21 p{
+        width: 80%;
+        padding: 6px;
+        font-size: 18px;
+    }
+
+    .pic-22{
+    
+        display: flex;
+        justify-content: center;
+        width: 100%;
+    }
+    
+    .pic-22 img {
+        width: 80%;
+        margin-top: 120px;
+        padding: 24px;
+    }
+    
+    .epi-22{display: flex;
+        justify-content: center;
+        width: 100%;}
+    
+    
+      .epi-22 p{
+        width: 80%;
+        padding: 6px;
+        font-size: 18px;
+    }
+
+    .pic-23{
+    
+        display: flex;
+        justify-content: center;
+        width: 100%;
+    }
+    
+    .pic-23 img {
+        width: 80%;
+        margin-top: 120px;
+        padding: 24px;
+    }
+    
+    .epi-23{display: flex;
+        justify-content: center;
+        width: 100%;}
+    
+    
+      .epi-23 p{
+        width: 80%;
+        padding: 6px;
+        font-size: 18px;
+    }
+
+    .pic-24{
+    
+        display: flex;
+        justify-content: center;
+        width: 100%;
+    }
+    
+    .pic-24 img {
+        width: 80%;
+        margin-top: 120px;
+        padding: 24px;
+    }
+    
+    .epi-24{display: flex;
+        justify-content: center;
+        width: 100%;}
+    
+    
+      .epi-24 p{
+        width: 80%;
+        padding: 6px;
+        font-size: 18px;
+    }
+
+    .pic-25{
+    
+        display: flex;
+        justify-content: center;
+        width: 100%;
+    }
+    
+    .pic-25 img {
+        width: 80%;
+        margin-top: 120px;
+        padding: 24px;
+    }
+    
+    .epi-25{display: flex;
+        justify-content: center;
+        width: 100%;}
+    
+    
+      .epi-25 p{
+        width: 80%;
+        padding: 6px;
+        font-size: 18px;
+    }
+
+    .pic-26{
+    
+        display: flex;
+        justify-content: center;
+        width: 100%;
+    }
+    
+    .pic-26 img {
+        width: 80%;
+        margin-top: 120px;
+        padding: 24px;
+    }
+    
+    .epi-26{display: flex;
+        justify-content: center;
+        width: 100%;}
+    
+    
+      .epi-26 p{
+        width: 80%;
+        padding: 6px;
+        font-size: 18px;
+    }
+
+    .pic-27{
+    
+        display: flex;
+        justify-content: center;
+        width: 100%;
+    }
+    
+    .pic-27 img {
+        width: 80%;
+        margin-top: 120px;
+        padding: 24px;
+    }
+    
+    .epi-27{display: flex;
+        justify-content: center;
+        width: 100%;}
+    
+    
+      .epi-27 p{
         width: 80%;
         padding: 6px;
         font-size: 18px;
