--- a/style.css
+++ b/style.css
@@ -21,14 +21,24 @@ body{font-family: 'EB Garamond', serif;
     justify-content: center;
     background: white;
     width: 100%;
-    height: 10%;
+    height: 8%;
     margin-top: 0;
     padding: 0%;
     top: 0;
     z-index: 10;
+    
      
      }
 
+.container-1 h1 {margin: 24px;}
+
+
+a{text-decoration: none;
+ color: black;}
+
+ .anchor-margin{margin-bottom: 72px;}
+
+ 
       
 
 
@@ -60,8 +70,9 @@ body{font-family: 'EB Garamond', serif;
     flex-wrap: wrap;
     justify-content: center;
     
-    
 }
+
+
 
 
 .map-1{
@@ -1201,7 +1212,30 @@ body{font-family: 'EB Garamond', serif;
     font-size: 18px;
 }
 
+.subcontainer-6{
 
+
+ display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 100%;
+    
+}
+
+.subcontainer-6 h3{
+
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    font-size: 36px;
+    padding: 6px;
+    margin-top: 12px;
+   
+    
+}
 
 
 
