--- a/style.css
+++ b/style.css
@@ -2337,7 +2337,52 @@ a{text-decoration: none;
         font-size: 18px;
     }
 
+    .subcontainer-6{
+
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+        margin-top: 12px;
+    } 
+
+        .subcontainer-7{
+
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+        margin-top: 12px;
+    }
+
+       .testimonios-prehistoria {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+        margin-top: 12px;
+    }
+
     
+
+   .testimonios-prehistoria h4{
+
+
+        text-align: center;
+        font-size: 28px;
+        padding: 22px;
+        margin-top: 60px;
+        color: #800020;
+        margin: 0;
+
+        
+    }
     
-    
+
+        .subcontainer-7 p{
+        width: 90%;
+        font-size: 18px;
+        padding: 12px;
+        line-height: 1.5em;
+    }
 }
